fix: fix overflowing by implementing horizontal scrolling for categories on home page and hide its scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -762,6 +762,11 @@ video {
   cursor: pointer;
 }
 
+.touch-pan-x{
+  --tw-pan-x: pan-x;
+  touch-action: var(--tw-pan-x) var(--tw-pan-y) var(--tw-pinch-zoom);
+}
+
 .resize{
   resize: both;
 }
@@ -844,6 +849,14 @@ video {
 
 .overflow-hidden{
   overflow: hidden;
+}
+
+.overflow-x-auto{
+  overflow-x: auto;
+}
+
+.overflow-y-hidden{
+  overflow-y: hidden;
 }
 
 .rounded-lg{
@@ -1161,6 +1174,21 @@ header {
   content: "";
   flex: 1;
   border-bottom: 1px solid #ccc;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 .hover\:text-gray-600:hover{
