--- a/src/input.css
+++ b/src/input.css
@@ -33,3 +33,13 @@ header {
   flex: 1;
   border-bottom: 1px solid #ccc;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
